--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.datasource.url=jdbc:h2:mem:testdb;
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/taskapp?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=qwe123$!
